<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NewbornNews</string>
    <string name="baby">Baby</string>
    <string name="mom">Mom</string>
    <string name="log">Log</string>
    <string name="eat">Eat</string>
    <string name="sleep">Sleep</string>
    <string name="poop">Poop</string>
    <string name="meds">Meds</string>
    <string name="pump">Pump</string>

    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="breast">Breast</string>
    <string name="bottle">Bottle</string>
    <string name="left">Breast Left</string>
    <string name="right">Breast Right</string>
    <string name="ounces">Ounces</string>
    <string name="note">Note</string>
    <string name="wet">Wet</string>
    <string name="dirty">Dirty</string>
        
    <string name="no_news">No News</string>
    
    <string name="confirm">Confirm</string>
</resources>
