<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<Button android:id="@+id/startNow" android:onClick="onNowClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/start" android:layout_alignParentTop="true" />
	<Button android:id="@+id/startDate" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toRightOf="@id/startNow" />
	<Button android:id="@+id/startTime" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toRightOf="@id/startDate" />

	<Button android:id="@+id/stopNow" android:onClick="onNowClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/stop" android:layout_below="@id/startNow" />
	<Button android:id="@+id/stopDate" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/startDate" android:layout_alignLeft="@id/startDate" />
	<Button android:id="@+id/stopTime" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toRightOf="@id/stopDate" android:layout_alignBaseline="@id/stopDate" />

	<RadioGroup android:id="@+id/side" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:layout_below="@id/stopDate">
		<RadioButton android:id="@+id/breastLeft" android:text="@string/left" />
		<RadioButton android:id="@+id/breastRight" android:text="@string/right" />
		<RadioButton android:id="@+id/bottle" android:text="@string/bottle"
			android:paddingRight="10dp" />
	</RadioGroup>
	<EditText android:id="@+id/ounces" android:layout_height="wrap_content"
		android:layout_width="50dp" android:layout_toRightOf="@id/side"
		android:layout_alignBottom="@id/side" />
	<!--
		android:inputType="number" android:enabled="false"
		android:focusable="false" />
	-->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/ounces"
		android:paddingLeft="3dp" android:layout_toRightOf="@id/ounces"
		android:layout_alignBaseline="@id/ounces" />

	<TextView android:id="@+id/noteText" android:text="@string/note"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/side" />
	<EditText android:id="@+id/note" android:layout_height="wrap_content"
		android:layout_width="match_parent" android:layout_below="@id/noteText" />

	<Button android:id="@+id/confirm" android:text="@string/confirm"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onConfirm" android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true" />
</RelativeLayout>