<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<Button android:id="@+id/startNow" android:onClick="onNowClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/time" android:layout_alignParentTop="true" />
	<Button android:id="@+id/startDate" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toRightOf="@id/startNow" />
	<Button android:id="@+id/startTime" android:onClick="onDateTimeClick"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_toRightOf="@id/startDate" />

	<CheckBox android:text="@string/wet" android:id="@+id/wet"
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_below="@id/startNow" />
	<CheckBox android:text="@string/dirty" android:id="@+id/dirty"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/wet" />

	<TextView android:id="@+id/noteText" android:text="@string/note"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/dirty" />
	<EditText android:id="@+id/note" android:layout_height="wrap_content"
		android:layout_width="match_parent" android:layout_below="@id/noteText" />

	<Button android:id="@+id/confirm" android:text="@string/confirm"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onConfirm" android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true" />
</RelativeLayout>