<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:weightSum="1">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/start" />
		<Button android:id="@+id/startDate" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onDateTimeClick" />
		<Button android:id="@+id/startTime" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onDateTimeClick" />
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/stop" />
		<Button android:id="@+id/stopDate" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onDateTimeClick" />
		<Button android:id="@+id/stopTime" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onDateTimeClick" />
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<RadioGroup android:id="@+id/breastSide"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<RadioButton android:layout_width="wrap_content"
				android:id="@+id/left" android:layout_height="wrap_content"
				android:text="@string/left" android:checked="true" />
			<RadioButton android:layout_width="wrap_content"
				android:id="@+id/right" android:layout_height="wrap_content"
				android:text="@string/right" android:paddingRight="10dp" />
		</RadioGroup>

		<EditText android:layout_height="wrap_content"
			android:layout_width="50dp" android:id="@+id/ounces" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/ounces"
			android:paddingLeft="3dp" />
	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/note" />
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/note" />

	<Button android:id="@+id/confirm" android:text="@string/confirm"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:onClick="onConfirm" />
</LinearLayout>